@@ -1,2 +1,0 @@
-usr/lib/python2.0/site-packages/wc
-usr/lib/python2.0/site-packages/wc/gui
